#########################################################################
# Makefile.am
#########################################################################

#========================================================================
# Application list
#========================================================================

bin_PROGRAMS = \
	queue_priority

#========================================================================
# Sources for application queue_priority
#========================================================================

queue_priority_SOURCES = \
	main.cpp

#========================================================================
# C preprocessor options for compiling queue_priority
#========================================================================

AM_CPPFLAGS = -Wall -Wextra

#========================================================================
# Library dependencies for building secure_manager
#========================================================================

LDADD = -lpthread
 

