#########################################################################
# configure.ac
#########################################################################

#========================================================================
# Init autoconf
#========================================================================

AC_INIT(queue_priority,0.1)

#========================================================================
# Init automake
#
# Call AM_INIT_AUTOMAKE with single argument -> argument defines which
# automake options are selected ("foreign" means no README / AUTHORS / 
# etc. files).
#========================================================================

AM_INIT_AUTOMAKE([foreign])

#------------------------------------------------------------------------
# C compiler
#------------------------------------------------------------------------

AC_PROG_CC

#------------------------------------------------------------------------
# C++ compiler
#------------------------------------------------------------------------

AC_PROG_CXX

#========================================================================
# Configure output files
#========================================================================

AC_CONFIG_FILES([
	Makefile
])

#========================================================================
# Request output from autoconf
#========================================================================

AC_OUTPUT

